fixes scrollbar in chat

--- a/src/js/controllers/correspondentDevices/correspondentDevice/correspondentDevice.scss
+++ b/src/js/controllers/correspondentDevices/correspondentDevice/correspondentDevice.scss
@@ -2,6 +2,9 @@ $background: #fff;
 
 .chat {
   background: $background;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
   .send_form {
     position: absolute;
